<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YokonamiFirstApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_send">Send</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="edit_message">Enter a message</string>
    <string name="text_button_to_activity_hello_world">Hello World</string>
    <string name="text_button_to_activity_send_text">Send Text</string>
    <string name="title_activity_send_text">SendTextActivity</string>
    <string name="title_activity_hello_world">HelloWorldActivity</string>
    <string name="button_send_text">Send</string>
    <string name="text_button_finish_activity">Finish</string>
    <string name="text_button_to_activity_puyo_score">puyo puyo</string>
    <string name="title_activity_puyo_score">PuyoScoreActivity</string>
    <string name="puyo_flick_instruction"> ←△  ↓☆  ↑×  ◯→</string>
    <string name="title_activity_drag_drop">DragDropActivity</string>
	<string name ="description_tramp_sample">Tramp</string>
    <string name="text_button_to_activity_drag_drop">tramp</string>
</resources>